--- a/pom.xml
+++ b/pom.xml
@@ -1,285 +1,282 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.databene</groupId>
-    <artifactId>jdbacl</artifactId>
-    <version>0.8.19-EA1</version>
+	<groupId>org.databene</groupId>
+	<artifactId>jdbacl</artifactId>
+	<version>0.8.19-EA2</version>
 
-    <properties>
-    	<formats_version>1.0.0-EA1</formats_version>
-    	<script_version>1.0.0-EA1</script_version>
-    	<commons_version>1.0.0-EA1</commons_version>
-    	<contiperf_version>2.3.3</contiperf_version>
-    </properties>
+	<properties>
+		<formats_version>1.0.0-EA2</formats_version>
+		<script_version>1.0.0-EA2</script_version>
+		<commons_version>1.0.0-EA2</commons_version>
+		<contiperf_version>2.3.4-EA2</contiperf_version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-    <packaging>jar</packaging>
-    <name>databene jdbacl</name>
-    <url>http://databene.org/jdbacl</url>
-    <description>
-    	jdbacl stands for 'Java DataBase ACcess Layer' and provides utilities for accessing JDBC databases from
+
+	<packaging>jar</packaging>
+	<name>databene jdbacl</name>
+	<url>http://databene.org/jdbacl</url>
+	<inceptionYear>2006</inceptionYear>
+	<description>
+    	'jdbacl' stands for 'Java DataBase ACcess Layer' and provides utilities for accessing JDBC databases from
     	Java programs, retrieving meta information in an object model and querying database data.
     </description>
 
-    <licenses>
-        <license>
-            <name>GNU Public License</name>
-            <url>http://www.fsf.org/licensing/licenses/gpl.txt</url>
-            <distribution>manual</distribution>
-            <comments>
+	<licenses>
+		<license>
+			<name>GNU Public License</name>
+			<url>http://www.fsf.org/licensing/licenses/gpl.txt</url>
+			<distribution>manual</distribution>
+			<comments>
                 Redistribution and use in source and binary forms, with or without
                 modification, is permitted under the terms of the
                 GNU General Public License.
             </comments>
-        </license>
-        <license>
-            <name>Commercial License</name>
-            <url>http://databene.org/commercial_license.txt</url>
-            <distribution>manual</distribution>
-            <comments>
+		</license>
+		<license>
+			<name>Commercial License</name>
+			<url>http://databene.org/commercial_license.txt</url>
+			<distribution>manual</distribution>
+			<comments>
                 For redistributing this software or a derivative work under a license
                 other than the GPL-compatible Free Software License as defined by the
                 Free Software Foundation or approved by OSI, you must first obtain
                 a commercial license for this software from Volker Bergmann.
             </comments>
-        </license>
-    </licenses>
+		</license>
+	</licenses>
 
-    <developers>
-        <developer>
-            <name>Volker Bergmann</name>
-            <id>vbergmann</id>
-            <email>volker@databene.org</email>
-            <timezone>+1</timezone>
-            <roles>
-                <role>Project Founder</role>
-                <role>Architect</role>
-                <role>Developer</role>
-            </roles>
-        </developer>
-    </developers>
+	<organization>
+		<name>Volker Bergmann</name>
+		<url>http://www.bergmann-it.de</url>
+	</organization>
 
-    <dependencies>
-    
-    	<!-- databene dependencies -->
-        <dependency>
-            <groupId>org.databene</groupId>
-            <artifactId>databene-commons</artifactId>
-            <version>${commons_version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.databene</groupId>
-            <artifactId>databene-formats</artifactId>
-            <version>${formats_version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.databene</groupId>
-            <artifactId>databene-script</artifactId>
-            <version>${script_version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.databene</groupId>
-            <artifactId>contiperf</artifactId>
-            <version>${contiperf_version}</version>
-        </dependency>
-        
-        <!--  Parsing -->
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr-runtime</artifactId>
-            <version>3.3</version>
-        </dependency>
-        
-		<!--  databases -->
+	<developers>
+		<developer>
+			<name>Volker Bergmann</name>
+			<id>vbergmann</id>
+			<email>volker@databene.org</email>
+			<timezone>+1</timezone>
+			<roles>
+				<role>Project Founder</role>
+				<role>Architect</role>
+				<role>Developer</role>
+			</roles>
+		</developer>
+	</developers>
+
+	<dependencies>
+
+		<!-- databene dependencies -->
 		<dependency>
-		    <groupId>hsqldb</groupId>
-		    <artifactId>hsqldb</artifactId>
-		    <version>1.8.0.7</version>
-		    <scope>test</scope>
+			<groupId>org.databene</groupId>
+			<artifactId>databene-commons</artifactId>
+			<version>${commons_version}</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>com.h2database</groupId>
-		    <artifactId>h2</artifactId>
-		    <version>1.2.136</version>
-		    <scope>test</scope>
+			<groupId>org.databene</groupId>
+			<artifactId>databene-formats</artifactId>
+			<version>${formats_version}</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>postgresql</groupId>
-		    <artifactId>postgresql</artifactId>
-		    <version>8.4-701.jdbc4</version>
-		    <scope>test</scope>
+			<groupId>org.databene</groupId>
+			<artifactId>databene-script</artifactId>
+			<version>${script_version}</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>org.apache.derby</groupId>
-		    <artifactId>derby</artifactId>
-		    <version>10.7.1.1</version>
-		    <scope>test</scope>
+			<groupId>org.databene</groupId>
+			<artifactId>contiperf</artifactId>
+			<version>${contiperf_version}</version>
 		</dependency>
-		
+
+		<!-- Parsing -->
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr-runtime</artifactId>
+			<version>3.3</version>
+		</dependency>
+
+		<!-- databases -->
+		<dependency>
+			<groupId>hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>1.8.0.7</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.2.136</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.4-701.jdbc4</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.7.1.1</version>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>cubrid</groupId>
 			<artifactId>cubrid-jdbc</artifactId>
 			<version>8.4.1.2032</version>
-		    <scope>test</scope>
+			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
-		    <artifactId>jaybird</artifactId>
-		    <version>2.1.6</version>
-		    <scope>test</scope>
+			<groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
+			<artifactId>jaybird</artifactId>
+			<version>2.1.6</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency> <!-- needed for firebird -->
-		    <groupId>javax.resource</groupId>
-		    <artifactId>connector-api</artifactId>
-		    <version>1.5</version>
-		    <scope>test</scope>
+			<groupId>javax.resource</groupId>
+			<artifactId>connector-api</artifactId>
+			<version>1.5</version>
+			<scope>test</scope>
 		</dependency>
-		
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.4</version>
-        </dependency>
-	
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+
 		<!-- Test dependencies -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.4</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.6.4</version>
+			<scope>test</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+			<scope>test</scope>
+		</dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 
-    </dependencies>
-    
-    <build>
+	</dependencies>
 
-	    <extensions>
+	<build>
+
+		<extensions>
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ftp</artifactId>
 				<version>1.0-alpha-6</version>
 			</extension>
-	    </extensions>
-	    
-        <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <excludes>
-                    <exclude>log4j.xml</exclude>
-                </excludes>
-            </resource>
+		</extensions>
 
-            <resource>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>**/version.properties</include>
-                </includes>
-            </resource>
+		<resources>
+			<resource>
+				<filtering>false</filtering>
+				<directory>${basedir}/src/main/resources</directory>
+				<excludes>
+					<exclude>**/version.properties</exclude>
+				</excludes>
+			</resource>
 
-            <resource>
-                <filtering>false</filtering>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>license.txt</include>
-                </includes>
-            </resource>
-        </resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>${basedir}/src/main/resources</directory>
+				<includes>
+					<include>**/version.properties</include>
+				</includes>
+			</resource>
 
-        <testResources>
-            <testResource>
-                <filtering>false</filtering>
-                <directory>${basedir}/src/test/resources</directory>
-                <includes>
-                    <include>**/*</include>
-                </includes>
-            </testResource>
-        </testResources>
+			<resource>
+				<filtering>false</filtering>
+				<directory>${basedir}</directory>
+				<includes>
+					<include>license.txt</include>
+				</includes>
+			</resource>
+		</resources>
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>org.databene.jdbacl.swing.JdbaclGUI</mainClass>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4.1</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/dist-assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.3</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+		<testResources>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>${basedir}/src/test/resources</directory>
+				<includes>
+					<include>**/*</include>
+				</includes>
+			</testResource>
+		</testResources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.databene.jdbacl.swing.JdbaclGUI</mainClass>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.6</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.9.1</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
 				<executions>
 					<execution>
 						<goals>
@@ -289,60 +286,71 @@
 					</execution>
 				</executions>
 			</plugin>
-        </plugins>
-    </build>
 
-    <reporting>
-        <plugins>
-            
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-1</version>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <configuration>
-                    <linkXref>true</linkXref>
-                    <sourceEncoding>UTF-8</sourceEncoding>
-                    <minimumTokens>100</minimumTokens>
-                    <targetJdk>1.5</targetJdk>
-                </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>dependencies</report>
-                            <report>project-team</report>
-                            <report>license</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-<!--  
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jxr-maven-plugin</artifactId>
-            </plugin>
--->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-            </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/dist-assembly.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
 
-        </plugins>
-    </reporting>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.4</version>
+			</plugin>
+
+		</plugins>
+
+	</build>
+
+	<reporting>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.7</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>dependencies</report>
+							<report>project-team</report>
+							<report>license</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jdepend-maven-plugin</artifactId>
+				<version>2.0</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<linkXref>true</linkXref>
+					<minimumTokens>100</minimumTokens>
+					<targetJdk>1.6</targetJdk>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.17</version>
+			</plugin>
+
+		</plugins>
+
+	</reporting>
 
 	<distributionManagement>
 		<repository>
@@ -351,9 +359,10 @@
 			<url>ftp://databene.org</url>
 		</repository>
 	</distributionManagement>
-  
+
 	<scm>
-		<url>https://jdbacl.svn.sourceforge.net/svnroot/jdbacl</url>
+		<connection>scm:svn:https://svn.code.sf.net/p/jdbacl/code</connection>
+		<url>https://sourceforge.net/p/jdbacl/code/HEAD/tree/</url>
 	</scm>
 
 </project>
